# svo-2.0

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  run.sh  run_all_rosario_sequences.sh  run_rosario_sequence.sh
scripts/: build.sh  modify_entrypoint.sh
svo_install_ws/: fix_path.sh
svo_install_ws/install/: .rosinstall  _setup_util.py  setup.sh
svo_install_ws/install/include/rpg_common/: cv_to_eigen.h  gnuplot.h  load.h  select.h  vector_to_eigen.h
svo_install_ws/install/include/rpg_common_ros/: bag_image_fetcher.h  param.h  visualize.h
svo_install_ws/install/include/svo/: config.h  frame_handler_base.h  global.h  imu_handler.h
svo_install_ws/install/include/svo_msgs/: DenseInput.h  DenseInputWithFeatures.h  Feature.h  Info.h  NbvTrajectory.h
svo_install_ws/install/lib/: libgflags.so.2.2.1  libgflags_nothreads.so.2.2.1  libglog.so.0
svo_install_ws/install/share/glog_catkin/: package.xml
svo_install_ws/install/share/glog_catkin/cmake/: glog-extras.cmake  glog_catkinConfig.cmake
svo_install_ws/install/share/rpg_common_py/: package.xml
svo_install_ws/install/share/rpg_common_py/cmake/: rpg_common_pyConfig.cmake
svo_install_ws/install/share/rpg_datasets/: package.xml
svo_install_ws/install/share/rpg_datasets/cmake/: rpg-datasets-fetch.cmake  rpg_datasetsConfig.cmake
svo_ros/: CMakeLists.txt
svo_ros/calib/: rosario_stereo_calib.yaml
svo_ros/include/svo_ros/: svo_interface.h
svo_ros/launch/: play_bag_viz.launch  rosario_stereo_imu.launch
svo_ros/param/: rosario_stereo_imu.yaml
svo_ros/src/: svo_interface.cpp
(+128 files in other folders)
