<?xml version="1.0"?>
<package format="2">
  <name>glog_catkin</name>
  <version>0.1.2</version>
  <description>glog_catkin</description>
  <maintainer email="slynen@ethz.ch">Simon Lynen</maintainer>

  <license>See package</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  
  <depend>gflags_catkin</depend>
  <build_depend>cmake_external_project_catkin</build_depend>
</package>
